[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/theme/zordoom_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/scripts/Menu/addon/LevelListing.gd" type="Script" id=2]
[ext_resource path="res://src/scripts/Menu/ReturnMainMenu.gd" type="Script" id=3]
[ext_resource path="res://scenes/Transitions/fade_in.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/audio/ui/button_click.wav" type="AudioStream" id=5]
[ext_resource path="res://resources/audio/ui/button_navigate.wav" type="AudioStream" id=6]
[ext_resource path="res://resources/mesh_libraries/incubator_lab_tiles.meshlib" type="MeshLibrary" id=7]
[ext_resource path="res://resources/images/characters/player/angela/angela_sheet_init_finished.png" type="Texture" id=8]
[ext_resource path="res://resources/images/characters/player/rivet/rivet_sprite_sheet_unarmed.png" type="Texture" id=9]

[node name="Spatial" type="Spatial"]

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 7 )
data = {
"cells": PoolIntArray( 0, 0, 30, 1, 0, 30, 2, 0, 30, 3, 0, 30, 4, 0, 30, 5, 0, 4, 65530, 0, 4, 65531, 0, 30, 65532, 0, 30, 65533, 0, 30, 65534, 0, 30, 65535, 0, 30, 0, 1, 30, 1, 1, 30, 2, 1, 30, 3, 1, 30, 4, 1, 30, 5, 1, 4, 65530, 1, 4, 65531, 1, 30, 65532, 1, 30, 65533, 1, 30, 65534, 1, 30, 65535, 1, 30, 0, 2, 30, 1, 2, 30, 2, 2, 30, 3, 2, 30, 4, 2, 30, 5, 2, 4, 65530, 2, 4, 65531, 2, 30, 65532, 2, 30, 65533, 2, 30, 65534, 2, 30, 65535, 2, 30, 0, 3, 4, 1, 3, 4, 2, 3, 4, 3, 3, 4, 4, 3, 4, 5, 3, 4, 65530, 3, 4, 65531, 3, 4, 65532, 3, 4, 65533, 3, 4, 65534, 3, 4, 65535, 3, 4, 0, 65524, 4, 1, 65524, 4, 2, 65524, 4, 3, 65524, 4, 4, 65524, 4, 5, 65524, 4, 65530, 65524, 4, 65531, 65524, 4, 65532, 65524, 4, 65533, 65524, 4, 65534, 65524, 4, 65535, 65524, 4, 65536, 65524, 9, 65537, 65524, 9, 65538, 65524, 9, 65539, 65524, 9, 65540, 65524, 9, 65541, 65524, 7, 131066, 65524, 7, 131067, 65524, 9, 131068, 65524, 9, 131069, 65524, 9, 131070, 65524, 9, 131071, 65524, 9, 131072, 65524, 9, 131073, 65524, 9, 131074, 65524, 9, 131075, 65524, 9, 131076, 65524, 9, 131077, 65524, 7, 196602, 65524, 7, 196603, 65524, 9, 196604, 65524, 9, 196605, 65524, 9, 196606, 65524, 9, 196607, 65524, 9, 196608, 65524, 9, 196609, 65524, 9, 196610, 65524, 9, 196611, 65524, 9, 196612, 65524, 9, 196613, 65524, 7, 262138, 65524, 7, 262139, 65524, 9, 262140, 65524, 9, 262141, 65524, 9, 262142, 65524, 9, 262143, 65524, 9, 262144, 65524, 9, 262145, 65524, 9, 262146, 65524, 9, 262147, 65524, 9, 262148, 65524, 9, 262149, 65524, 7, 327674, 65524, 7, 327675, 65524, 9, 327676, 65524, 9, 327677, 65524, 9, 327678, 65524, 9, 327679, 65524, 9, 327680, 65524, 9, 327681, 65524, 9, 327682, 65524, 9, 327683, 65524, 9, 327684, 65524, 9, 327685, 65524, 7, 393210, 65524, 7, 393211, 65524, 9, 393212, 65524, 9, 393213, 65524, 9, 393214, 65524, 9, 393215, 65524, 9, 393216, 65524, 31, 393217, 65524, 31, 393218, 65524, 31, 393219, 65524, 31, 393220, 65524, 31, 393221, 65524, 31, 458746, 65524, 31, 458747, 65524, 31, 458748, 65524, 31, 458749, 65524, 31, 458750, 65524, 31, 458751, 65524, 31, 0, 65525, 30, 1, 65525, 30, 2, 65525, 30, 3, 65525, 30, 4, 65525, 30, 5, 65525, 4, 65530, 65525, 4, 65531, 65525, 30, 65532, 65525, 30, 65533, 65525, 30, 65534, 65525, 30, 65535, 65525, 30, 65541, 65525, 11, 131066, 65525, 12, 131077, 65525, 11, 196602, 65525, 12, 196613, 65525, 11, 262138, 65525, 12, 262149, 65525, 11, 327674, 65525, 12, 327685, 65525, 11, 393210, 65525, 12, 393216, 65525, 31, 393217, 65525, 31, 393218, 65525, 31, 393219, 65525, 31, 393220, 65525, 31, 393221, 65525, 31, 458746, 65525, 31, 458747, 65525, 31, 458748, 65525, 31, 458749, 65525, 31, 458750, 65525, 31, 458751, 65525, 31, 0, 65526, 30, 1, 65526, 30, 2, 65526, 30, 3, 65526, 30, 4, 65526, 30, 5, 65526, 4, 65530, 65526, 4, 65531, 65526, 30, 65532, 65526, 30, 65533, 65526, 30, 65534, 65526, 30, 65535, 65526, 30, 65541, 65526, 11, 131066, 65526, 12, 131077, 65526, 11, 196602, 65526, 12, 196613, 65526, 11, 262138, 65526, 12, 262149, 65526, 11, 327674, 65526, 12, 327685, 65526, 11, 393210, 65526, 12, 393216, 65526, 31, 393217, 65526, 31, 393218, 65526, 31, 393219, 65526, 31, 393220, 65526, 31, 393221, 65526, 31, 458746, 65526, 31, 458747, 65526, 31, 458748, 65526, 31, 458749, 65526, 31, 458750, 65526, 31, 458751, 65526, 31, 0, 65527, 30, 1, 65527, 30, 2, 65527, 30, 3, 65527, 30, 4, 65527, 30, 5, 65527, 4, 65530, 65527, 4, 65531, 65527, 30, 65532, 65527, 30, 65533, 65527, 30, 65534, 65527, 30, 65535, 65527, 30, 65541, 65527, 11, 131066, 65527, 12, 131077, 65527, 11, 196602, 65527, 12, 196613, 65527, 11, 262138, 65527, 12, 262149, 65527, 11, 327674, 65527, 12, 327685, 65527, 11, 393210, 65527, 12, 393216, 65527, 31, 393217, 65527, 31, 393218, 65527, 31, 393219, 65527, 31, 393220, 65527, 31, 393221, 65527, 31, 458746, 65527, 31, 458747, 65527, 31, 458748, 65527, 31, 458749, 65527, 31, 458750, 65527, 31, 458751, 65527, 31, 0, 65528, 30, 1, 65528, 30, 2, 65528, 30, 3, 65528, 30, 4, 65528, 30, 5, 65528, 4, 65530, 65528, 4, 65531, 65528, 30, 65532, 65528, 30, 65533, 65528, 30, 65534, 65528, 30, 65535, 65528, 30, 65541, 65528, 11, 131066, 65528, 12, 131077, 65528, 11, 196602, 65528, 12, 196613, 65528, 11, 262138, 65528, 12, 262149, 65528, 11, 327674, 65528, 12, 327685, 65528, 11, 393210, 65528, 12, 393216, 65528, 31, 393217, 65528, 31, 393218, 65528, 31, 393219, 65528, 31, 393220, 65528, 31, 393221, 65528, 31, 458746, 65528, 31, 458747, 65528, 31, 458748, 65528, 31, 458749, 65528, 31, 458750, 65528, 31, 458751, 65528, 31, 0, 65529, 30, 1, 65529, 30, 2, 65529, 30, 3, 65529, 30, 4, 65529, 30, 5, 65529, 4, 65530, 65529, 4, 65531, 65529, 30, 65532, 65529, 30, 65533, 65529, 30, 65534, 65529, 30, 65535, 65529, 30, 65541, 65529, 11, 131066, 65529, 12, 131077, 65529, 11, 196602, 65529, 12, 196613, 65529, 11, 262138, 65529, 12, 262149, 65529, 11, 327674, 65529, 12, 327685, 65529, 11, 393210, 65529, 12, 393216, 65529, 31, 393217, 65529, 31, 393218, 65529, 31, 393219, 65529, 31, 393220, 65529, 31, 393221, 65529, 31, 458746, 65529, 31, 458747, 65529, 31, 458748, 65529, 31, 458749, 65529, 31, 458750, 65529, 31, 458751, 65529, 31, 0, 65530, 30, 1, 65530, 30, 2, 65530, 30, 3, 65530, 30, 4, 65530, 30, 5, 65530, 4, 65530, 65530, 4, 65531, 65530, 30, 65532, 65530, 30, 65533, 65530, 30, 65534, 65530, 30, 65535, 65530, 30, 65541, 65530, 11, 131066, 65530, 12, 131077, 65530, 11, 196602, 65530, 12, 196613, 65530, 11, 262138, 65530, 12, 262149, 65530, 11, 327674, 65530, 12, 327685, 65530, 11, 393210, 65530, 12, 393216, 65530, 31, 393217, 65530, 31, 393218, 65530, 31, 393219, 65530, 31, 393220, 65530, 31, 393221, 65530, 31, 458746, 65530, 31, 458747, 65530, 31, 458748, 65530, 31, 458749, 65530, 31, 458750, 65530, 31, 458751, 65530, 31, 0, 65531, 30, 1, 65531, 30, 2, 65531, 30, 3, 65531, 30, 4, 65531, 30, 5, 65531, 4, 65530, 65531, 4, 65531, 65531, 30, 65532, 65531, 30, 65533, 65531, 30, 65534, 65531, 30, 65535, 65531, 30, 65541, 65531, 11, 131066, 65531, 12, 131077, 65531, 11, 196602, 65531, 12, 196613, 65531, 11, 262138, 65531, 12, 262149, 65531, 11, 327674, 65531, 12, 327685, 65531, 11, 393210, 65531, 12, 393216, 65531, 31, 393217, 65531, 31, 393218, 65531, 31, 393219, 65531, 31, 393220, 65531, 31, 393221, 65531, 31, 458746, 65531, 31, 458747, 65531, 31, 458748, 65531, 31, 458749, 65531, 31, 458750, 65531, 31, 458751, 65531, 31, 0, 65532, 30, 1, 65532, 30, 2, 65532, 30, 3, 65532, 30, 4, 65532, 30, 5, 65532, 4, 65530, 65532, 4, 65531, 65532, 30, 65532, 65532, 30, 65533, 65532, 30, 65534, 65532, 30, 65535, 65532, 30, 65541, 65532, 11, 131066, 65532, 12, 131077, 65532, 11, 196602, 65532, 12, 196613, 65532, 11, 262138, 65532, 12, 262149, 65532, 11, 327674, 65532, 12, 327685, 65532, 11, 393210, 65532, 12, 393216, 65532, 31, 393217, 65532, 31, 393218, 65532, 31, 393219, 65532, 31, 393220, 65532, 31, 393221, 65532, 31, 458746, 65532, 31, 458747, 65532, 31, 458748, 65532, 31, 458749, 65532, 31, 458750, 65532, 31, 458751, 65532, 31, 0, 65533, 24, 1, 65533, 24, 2, 65533, 24, 3, 65533, 24, 4, 65533, 24, 5, 65533, 4, 65530, 65533, 4, 65531, 65533, 24, 65532, 65533, 24, 65533, 65533, 24, 65534, 65533, 24, 65535, 65533, 24, 65536, 65533, 39, 65539, 65533, 45, 65540, 65533, 31, 65541, 65533, 7, 131066, 65533, 7, 131067, 65533, 31, 131068, 65533, 42, 131071, 65533, 45, 131072, 65533, 40, 131075, 65533, 46, 131076, 65533, 31, 131077, 65533, 7, 196602, 65533, 7, 196603, 65533, 31, 196604, 65533, 43, 196607, 65533, 46, 196612, 65533, 31, 196613, 65533, 7, 262138, 65533, 7, 262139, 65533, 31, 262144, 65533, 31, 262145, 65533, 44, 262146, 65533, 47, 262147, 65533, 31, 262148, 65533, 31, 262149, 65533, 7, 327674, 65533, 7, 327675, 65533, 31, 327676, 65533, 31, 327677, 65533, 44, 327678, 65533, 47, 327679, 65533, 31, 327680, 65533, 31, 327681, 65533, 31, 327682, 65533, 31, 327683, 65533, 31, 327684, 65533, 31, 327685, 65533, 7, 393210, 65533, 7, 393211, 65533, 31, 393212, 65533, 31, 393213, 65533, 31, 393214, 65533, 31, 393215, 65533, 31, 393216, 65533, 31, 393217, 65533, 31, 393218, 65533, 31, 393219, 65533, 31, 393220, 65533, 31, 393221, 65533, 31, 458746, 65533, 31, 458747, 65533, 31, 458748, 65533, 31, 458749, 65533, 31, 458750, 65533, 31, 458751, 65533, 31, 0, 65534, 30, 1, 65534, 30, 2, 65534, 30, 3, 65534, 30, 4, 65534, 30, 5, 65534, 4, 65530, 65534, 4, 65531, 65534, 30, 65532, 65534, 30, 65533, 65534, 30, 65534, 65534, 30, 65535, 65534, 30, 0, 65535, 30, 1, 65535, 30, 2, 65535, 30, 3, 65535, 30, 4, 65535, 30, 5, 65535, 4, 65530, 65535, 4, 65531, 65535, 30, 65532, 65535, 30, 65533, 65535, 30, 65534, 65535, 30, 65535, 65535, 30 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="LevelView" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="LevelView"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="LevelView/CenterContainer"]
margin_left = 440.0
margin_top = 297.0
margin_right = 840.0
margin_bottom = 423.0
alignment = 1

[node name="CenterRow" type="HBoxContainer" parent="LevelView/CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 63.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="LevelView/CenterContainer/VBoxContainer/CenterRow"]
margin_right = 400.0
margin_bottom = 63.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="LevelView/CenterContainer/VBoxContainer/CenterRow/Buttons"]
margin_right = 400.0
margin_bottom = 59.0
theme = ExtResource( 1 )
text = "Select level"
align = 1
valign = 1
uppercase = true

[node name="LevelList" type="VBoxContainer" parent="LevelView/CenterContainer/VBoxContainer/CenterRow/Buttons"]
margin_top = 63.0
margin_right = 400.0
margin_bottom = 63.0

[node name="BackButton" type="Button" parent="LevelView/CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 400.0
margin_bottom = 126.0
theme = ExtResource( 1 )
text = "BACK"
script = ExtResource( 3 )
menus = "StartGame"

[node name="Audio" type="Node" parent="LevelView/CenterContainer/VBoxContainer/BackButton"]

[node name="Click" type="AudioStreamPlayer" parent="LevelView/CenterContainer/VBoxContainer/BackButton/Audio"]
stream = ExtResource( 5 )

[node name="Move" type="AudioStreamPlayer" parent="LevelView/CenterContainer/VBoxContainer/BackButton/Audio"]
stream = ExtResource( 6 )

[node name="FadeIn" parent="LevelView" instance=ExtResource( 4 )]
visible = false

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.58517, 1.78978 )

[node name="Angela" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 3, -5 )

[node name="AngelaSprite" type="Sprite3D" parent="Angela"]
generate_lightmap = false
pixel_size = 0.04
billboard = 1
shaded = true
double_sided = false
texture = ExtResource( 8 )
hframes = 10
vframes = 2
frame = 1

[node name="Rivet" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 3, -5 )

[node name="RivetSprite" type="Sprite3D" parent="Rivet"]
generate_lightmap = false
pixel_size = 0.04
billboard = 1
shaded = true
double_sided = false
texture = ExtResource( 9 )
hframes = 10
vframes = 3

[connection signal="focus_exited" from="LevelView/CenterContainer/VBoxContainer/BackButton" to="LevelView/CenterContainer/VBoxContainer/BackButton" method="_on_BackButton_focus_exited"]
[connection signal="pressed" from="LevelView/CenterContainer/VBoxContainer/BackButton" to="LevelView/CenterContainer/VBoxContainer/BackButton" method="_on_BackButton_pressed"]
[connection signal="fade_finished" from="LevelView/FadeIn" to="LevelView" method="_on_FadeIn_fade_finished"]
